--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           mkdir -p _site
           cp index.html _site/
-          cp -r static _site/ 2>/dev/null || true
+          cp -rL static _site/ 2>/dev/null || true
           cp CNAME _site/ 2>/dev/null || true
           
       - name: Upload artifact
